infra/k8s-prod/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: registry.gitlab.com/edenjiga1/delivery-app/dashboard
          imagePullPolicy: Always
      imagePullSecrets:
        - name: registry-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-srv
spec:
  selector:
    app: dashboard
  ports:
    - name: dashboard
      protocol: TCP
      port: 80
      targetPort: 80
