infra/k8s-prod/delivery-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-api
  template:
    metadata:
      labels:
        app: delivery-api
    spec:
      containers:
        - name: delivery-api
          image: registry.gitlab.com/edenjiga1/delivery-app/delivery-api
          imagePullPolicy: Always
          resources:
            limits:
              memory: 500Mi
            requests:
              memory: 200Mi
      imagePullSecrets:
        - name: registry-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-api-srv
spec:
  selector:
    app: delivery-api
  ports:
    - name: delivery-api
      protocol: TCP
      port: 8000
      targetPort: 8000
