infra/k8s-prod/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: registry.gitlab.com/edenjiga1/delivery-app/products-api
          imagePullPolicy: Always
          resources:
            limits:
              memory: 200Mi
              cpu: 200m
            requests:
              memory: 150Mi
              cpu: 100m
      imagePullSecrets:
        - name: registry-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: products-srv
spec:
  selector:
    app: products
  ports:
    - name: products
      protocol: TCP
      port: 1337
      targetPort: 1337
