infra/k8s-prod/whatsapp-bot-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsapp-bot-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatsapp-bot
  template:
    metadata:
      labels:
        app: whatsapp-bot
    spec:
      containers:
        - name: whatsapp-bot
          image: registry.gitlab.com/edenjiga1/delivery-app/whatsapp-bot
          imagePullPolicy: Always
      imagePullSecrets:
        - name: registry-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: whatsapp-bot-srv
spec:
  selector:
    app: whatsapp-bot
  ports:
    - name: whatsapp-bot
      protocol: TCP
      port: 1000
      targetPort: 1000
