infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - secretName: kanguroo-xyz-tls
      hosts:
        - kanguroo.xyz
        - dashboard.kanguroo.xyz
        - strapi.kanguroo.xyz
  rules:
    - host: kanguroo.xyz
      http:
        paths:
          - path: /socket.io
            backend:
              serviceName: socket-api-srv
              servicePort: 8002
          - path: /(.*)
            backend:
              serviceName: delivery-api-srv
              servicePort: 8000
    - host: strapi.kanguroo.xyz
      http:
        paths:
          - backend:
              serviceName: products-srv
              servicePort: 1337
    - host: dashboard.kanguroo.xyz
      http:
        paths:
          - backend:
              serviceName: dashboard-srv
              servicePort: 80
